force-app/main/default/objects/Session_Speaker__c/fields/Is_Primary_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Speaker__c</fullName>
    <description>It is Primary Speaker</description>
    <formula>Speaker__r.Primary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It is Primary Speaker</inlineHelpText>
    <label>Is Primary Speaker</label>
    <type>Checkbox</type>
</CustomField>