force-app/main/default/objects/Session_Speaker__c/fields/Speaker_Name__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Name__c</fullName>
    <description>Speaker Name</description>
    <formula>Speaker__r.Speaker_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speaker Name</label>
    <type>Text</type>
</CustomField>