force-app/main/default/objects/Session_Speaker__c/validationRules/Duplication_Record_Validate.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplication_Record_Validate</fullName>
    <active>true</active>
    <errorConditionFormula>Duplication_Record_Chk__c</errorConditionFormula>
    <errorMessage>Speaker related to this Session already exist.</errorMessage>
</ValidationRule>